Addionl checks on affiliations

--- a/Master lists/Checking_Affiliations.ipynb
+++ b/Master lists/Checking_Affiliations.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,9 @@
       "26062\n",
       "8795\n",
       "13927\n",
-      "22722 JPE is the difference\n"
+      "22722 JPE is the difference\n",
+      "6077\n",
+      "4405\n"
      ]
     }
    ],
@@ -205,7 +207,10 @@
     "print(QJE_master.shape[0] + JPE_master.shape[0] + RES_master.shape[0] + AER_master.shape[0] + ECTA_master.shape[0])\n",
     "print(QJE_SCOPUS_contains_aff.shape[0] + JPE_SCOPUS_contains_aff.shape[0] + RES_SCOPUS_contains_aff.shape[0] + AER_SCOPUS_contains_aff.shape[0] + ECTA_SCOPUS_contains_aff.shape[0])\n",
     "print(QJE_total_missing + RES_total_missing + AER_total_missing + ECTA_total_missing)\n",
-    "print(8795 + 13927, 'JPE is the difference')"
+    "print(8795 + 13927, 'JPE is the difference')\n",
+    "\n",
+    "print(QJE_master.shape[0] + RES_master.shape[0])\n",
+    "print(QJE_SCOPUS_contains_aff.shape[0] + RES_SCOPUS_contains_aff.shape[0])"
    ]
   },
   {
