--- a/Master lists/Checking_Affiliations.ipynb
+++ b/Master lists/Checking_Affiliations.ipynb
@@ -61,6 +61,26 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Masterlists \n",
+    "QJE - 1940 - 2016\n",
+    "JPE 1892 - 2016\n",
+    "RES 933 - 2018\n",
+    "AER 911 - 2019\n",
+    "ECTA 1933 - 2019\n",
+    "\n",
+    "Scopus\n",
+    "QJE 1940 - 2020\n",
+    "JPE - 1969 - 2020\n",
+    "RES - 1940 - 2020\n",
+    "AER 1978 - 2021\n",
+    "ECTA 1974 - 2021"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 80,
    "metadata": {},
