--- a/QJE/QJE_Affiliations.ipynb
+++ b/QJE/QJE_Affiliations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "3163          c--Northwestern University,               None  None  None  None  "
       ]
      },
-     "execution_count": 281,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
@@ -11915,7 +11915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
@@ -11981,7 +11981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -23776,7 +23776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -23784,78 +23784,175 @@
      "output_type": "stream",
      "text": [
       "University Of Chicago\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
       "University Of Chicago\n",
+      "University Of Cambridge\n",
       "University Of California\n",
       "Harvard University\n",
       "Princeton University\n",
+      "Massachussetts Institute Of Technology\n",
       "Massachusetts Institute Of Technology\n",
       "University Of Chicago\n",
       "University Of Chicago\n",
       "Harvard University\n",
+      "Massachusetts Inst. Of Technology\n",
       "Massachusetts Institute Of Technology\n",
+      "Massachusetts Inst. Of Technology\n",
       "Massachusetts Institute Of Technology\n",
+      "Massachusetts Institute Of Technol.\n",
       "Massachusetts Institute Of Technology\n",
+      "Massachusetts Institute Of Technol.\n",
       "Massachusetts Institute Of Technology\n",
+      "Massachusetts Inst. Of Technology\n",
       "Massachusetts Institute Of Technology\n",
+      "Massachusetts Inst. Of Technology\n",
       "Massachusetts Institute Of Technology\n",
       "University Of Chicago\n",
+      "Massachusetts Institute Op Technology\n",
       "Massachusetts Institute Of Technology\n",
       "Princeton University\n",
       "University Of Chicago\n",
       "Harvard University\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
       "University Of Chicago\n",
+      "Massachusetts Institute Op Technology\n",
       "Massachusetts Institute Of Technology\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "The National Bureau Of Economic Research\n",
       "National Bureau Of Economic Research\n",
+      "Massachusetts Inst. Of Technology\n",
       "Massachusetts Institute Of Technology\n",
+      "Massachusetts Inst. Of Technology\n",
       "Massachusetts Institute Of Technology\n",
+      "University Of Cambridge\n",
+      "Nat. Bureau Of Economic Research\n",
       "National Bureau Of Economic Research\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "National Bureau Of Economic Reserach\n",
       "National Bureau Of Economic Research\n",
+      "The National Bureau Of Economic Research\n",
       "National Bureau Of Economic Research\n",
+      "The National Bureau Of Economic Research\n",
       "National Bureau Of Economic Research\n",
+      "National Bureau Of Eonomic Research\n",
       "National Bureau Of Economic Research\n",
+      "National Bureau Of Economic Research (Nber)\n",
       "National Bureau Of Economic Research\n",
+      "National Bureau Of Economic Researchmi\n",
       "National Bureau Of Economic Research\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "The National Bureau Of Economic Research\n",
       "National Bureau Of Economic Research\n",
+      "The National Bureau Of Economic Research\n",
       "National Bureau Of Economic Research\n",
+      "Massachusetts Institute Of Technol.\n",
       "Massachusetts Institute Of Technology\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "The National Bureau Of Economic Research\n",
       "National Bureau Of Economic Research\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "National Bureau Of Economic Research World Bank\n",
       "National Bureau Of Economic Research\n",
       "Stanford University\n",
       "University Of California\n",
+      "Massachusetts Institute Of Technol.\n",
       "Massachusetts Institute Of Technology\n",
+      "Massachusetts Inst. Of Technology\n",
       "Massachusetts Institute Of Technology\n",
+      "Massachusetts Inst. Of Technology\n",
       "Massachusetts Institute Of Technology\n",
+      "Massachusetts Inst. Of Technology\n",
       "Massachusetts Institute Of Technology\n",
+      "Massachusetts Institue Of Technology\n",
       "Massachusetts Institute Of Technology\n",
       "University Of Chicago\n",
       "Stanford University\n",
+      "Massachussetts Institute Of Technology\n",
       "Massachusetts Institute Of Technology\n",
+      "National Bureau Of Economic Researchma\n",
       "National Bureau Of Economic Research\n",
+      "University Of Cambridge\n",
+      "The National Bureau Of Economic Research\n",
       "National Bureau Of Economic Research\n",
+      "The National Bureau Of Economic Research\n",
       "National Bureau Of Economic Research\n",
+      "Massachusetts Inst. Of Technology\n",
       "Massachusetts Institute Of Technology\n",
+      "University Of Cambridge\n",
+      "Massachusetts Institute Of Technol.\n",
       "Massachusetts Institute Of Technology\n",
+      "University Of Cambridge\n",
+      "Massachusetts Institute Of Technol.\n",
       "Massachusetts Institute Of Technology\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "National Bureau For Economic Research\n",
       "National Bureau Of Economic Research\n",
+      "National Bureau Ofeconomicresearch\n",
       "National Bureau Of Economic Research\n",
+      "National Bureau Of Economic Researchil\n",
       "National Bureau Of Economic Research\n",
+      "National Bureau Of Economic Reasearch\n",
       "National Bureau Of Economic Research\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
+      "University Of Cambridge\n",
       "University Of Chicago\n",
       "University Of California\n",
+      "Massachusetts Inst. Of Technology\n",
       "Massachusetts Institute Of Technology\n",
+      "National Bureau Economic Research\n",
       "National Bureau Of Economic Research\n",
+      "Massachusetts Inst. Of Technology\n",
       "Massachusetts Institute Of Technology\n",
       "Harvard University\n",
+      "Bureau Of Economic Research\n",
       "National Bureau Of Economic Research\n",
+      "Masschusetts Institute Of Technology\n",
       "Massachusetts Institute Of Technology\n",
+      "The National Bureau Of Economic Research\n",
       "National Bureau Of Economic Research\n",
+      "The National Bureau Of Economic Research\n",
       "National Bureau Of Economic Research\n",
+      "The National Bureau Of Economic Research\n",
       "National Bureau Of Economic Research\n",
+      "The National Bureau Of Economic Research\n",
       "National Bureau Of Economic Research\n",
+      "The National Bureau Of Economic Research\n",
       "National Bureau Of Economic Research\n",
+      "The National Bureau Of Economic Research\n",
       "National Bureau Of Economic Research\n",
+      "National Bureau Of Economic Researchny\n",
       "National Bureau Of Economic Research\n",
-      "9\n"
+      "54\n"
      ]
     }
    ],
@@ -23876,11 +23973,13 @@
     "    \n",
     "    National_Bureau_Fuzz = fuzz.ratio(combined_sorted_filtered_final.iat[i,1],\"National Bureau Of Economic Research\")\n",
     "    if National_Bureau_Fuzz >85 and National_Bureau_Fuzz < 100:\n",
+    "        print(combined_sorted_filtered_final.iat[i,1])\n",
     "        combined_sorted_filtered_final.iat[i,1] = \"National Bureau Of Economic Research\"\n",
     "        print(combined_sorted_filtered_final.iat[i,1])\n",
     "\n",
     "    MIT_Fuzz = fuzz.ratio(combined_sorted_filtered_final.iat[i,1],\"Massachusetts Institute Of Technology\")\n",
     "    if MIT_Fuzz >85 and MIT_Fuzz < 100:\n",
+    "        print(combined_sorted_filtered_final.iat[i,1])\n",
     "        combined_sorted_filtered_final.iat[i,1] = \"Massachusetts Institute Of Technology\"\n",
     "        print(combined_sorted_filtered_final.iat[i,1])\n",
     "\n",
@@ -23929,6 +24028,23 @@
     "    Chicago_Fuzz = fuzz.ratio(combined_sorted_filtered_final.iat[i,1],\"University Of Chicago\")\n",
     "    if Chicago_Fuzz > 85 and Chicago_Fuzz < 100:\n",
     "        combined_sorted_filtered_final.iat[i,1] = \"University Of Chicago\"\n",
+    "        print(combined_sorted_filtered_final.iat[i,1])\t\n",
+    "        x =x+1\n",
+    "\n",
+    "    Cambridge_Fuzz = fuzz.ratio(combined_sorted_filtered_final.iat[i,1],\"University Of Cambridge\")\n",
+    "    if Cambridge_Fuzz > 90 and Cambridge_Fuzz < 100:\n",
+    "        combined_sorted_filtered_final.iat[i,1] = \"University Of Cambridge\"\n",
+    "        print(combined_sorted_filtered_final.iat[i,1])\t\n",
+    "\n",
+    "    Cambridge_Fuzz1 = fuzz.ratio(combined_sorted_filtered_final.iat[i,1],\"Cambridge\")\n",
+    "    if Cambridge_Fuzz1 > 90:\n",
+    "        combined_sorted_filtered_final.iat[i,1] = \"University Of Cambridge\"\n",
+    "        print(combined_sorted_filtered_final.iat[i,1])\t\n",
+    "        x =x+1\n",
+    "\n",
+    "    Cambridge_Fuzz1 = fuzz.ratio(combined_sorted_filtered_final.iat[i,1],\"Cambridge University\")\n",
+    "    if Cambridge_Fuzz1 > 90:\n",
+    "        combined_sorted_filtered_final.iat[i,1] = \"University Of Cambridge\"\n",
     "        print(combined_sorted_filtered_final.iat[i,1])\t\n",
     "        x =x+1\n",
     "\n",
