--- a/RES/affs/RES_Fuzzy_match.ipynb
+++ b/RES/affs/RES_Fuzzy_match.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
     "    Article_ID = key1\n",
     "    content_type = value1[\"content_type\"]\n",
     "    author_list = value1[\"authors\"]\n",
-    "    authors = author_list[0]\n",
+    "    authorsNo = len(author_list)\n",
     "    stable_url = value1[\"stable_url\"]\n",
     "    for key2 in value1[\"affiliations\"]:\n",
     "        Ref_type = key2\n",
@@ -89,7 +89,7 @@
     "            ref_string = value1[\"affiliations\"][key2]\n",
     "\n",
     "    Reference_Data_List.append({'Journal_Name' : Journal_Name,\n",
-    "    'Authors' : authors, \n",
+    "    'Authors_count' : authorsNo, \n",
     "    'Article_ID' : Article_ID, 'content_type' : content_type,\n",
     "    'stable_url' : stable_url, \n",
     "    'Ref_type': Ref_type,  'ref_string':ref_string })\n",
@@ -153,19 +153,19 @@
     }
    ],
    "source": [
-    "RES_2000_2009['ref_string'][0]"
+    "#RES_2000_2009['ref_string'][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1027, 7)\n"
+      "(792, 2)\n"
      ]
     }
    ],
@@ -176,7 +176,8 @@
     "affs = pd.read_excel('/Users/MattJohnson/Desktop/Refs + affiliations/Affiliations/Unique Universities.xlsx')\n",
     "print(affs.shape)\n",
     "\n",
-    "data = RES_1990_1999\n",
+    "#data = RES_1990_1999\n",
+    "data = JPE_1940_2010.loc[500:1000].reset_index(drop = True)\n",
     "\n",
     "for i in range(len(affs)):\n",
     "    #Replaceing title case and stripping leading space\n",
@@ -1002,7 +1003,7 @@
    ],
    "source": [
     "process.extract()\n",
-    "RES_2000_2009.loc[0:10]\n"
+    "#RES_2000_2009.loc[0:10]\n"
    ]
   },
   {
@@ -1038,24 +1039,279 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = testdata.iat[4,6].split('\\n\\n')[1]\n",
+    "print(process.extractBests(a,Affiliation_choices, limit= 10))\n",
+    "\n",
+    "print(len(testdata.iat[4,6].split('\\n\\n')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Centre For Economic', 90), ('Centre For Economic Policy Research', 90), ('Centre For Economic Policy Research', 90), ('National Bureau Of Economic Research', 90), ('Policy Research', 90), ('University Of Chicago', 90), ('Center For Economic Policy Research', 87), ('African School Of Economics', 86), ('Agency For International Development', 86), ('Agriculture Organization Of The United Nations', 86)]\n",
-      "4\n"
+      "6\n",
+      "8\n"
      ]
     }
    ],
    "source": [
-    "a = testdata.iat[4,6].split('\\n\\n')[1]\n",
-    "print(process.extractBests(a,Affiliation_choices, limit= 10))\n",
+    "testdata = JPE_1940_2010.loc[500:1000].reset_index(drop = True)\n",
     "\n",
-    "print(len(testdata.iat[4,6].split('\\n\\n')))\n",
-    "for i in range()"
+    "split = testdata.iat[4,6].split('\\n\\n')\n",
+    "split_len = len(testdata.iat[4,6].split('\\n\\n'))\n",
+    "list = []\n",
+    "for j in range(split_len):\n",
+    "    if len(process.extractBests(split[j],Affiliation_choices, limit= 10, score_cutoff= 90)) >0:\n",
+    "        list = list + process.extractBests(split[j],Affiliation_choices, limit= 10, score_cutoff= 90)\n",
+    "        #print(list)\n",
+    "        print(len(list))\n",
+    "        #print(process.extractBests(split[i],Affiliation_choices, limit= 10, score_cutoff= 90))\n",
+    "        #print(i)\n",
+    "        \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length =  2 , Number =  0\n",
+      "Length =  4 , Number =  1\n",
+      "Length =  2 , Number =  2\n",
+      "Length =  6 , Number =  3\n",
+      "Length =  1 , Number =  4\n",
+      "Length =  4 , Number =  5\n",
+      "Length =  3 , Number =  6\n",
+      "Length =  0 , Number =  7\n",
+      "Length =  4 , Number =  8\n",
+      "Length =  3 , Number =  9\n",
+      "Length =  2 , Number =  10\n",
+      "Length =  2 , Number =  11\n",
+      "Length =  3 , Number =  12\n",
+      "Length =  4 , Number =  13\n",
+      "Length =  8 , Number =  14\n",
+      "Length =  0 , Number =  15\n",
+      "Length =  2 , Number =  16\n",
+      "Length =  6 , Number =  17\n",
+      "Length =  3 , Number =  18\n",
+      "Length =  2 , Number =  19\n",
+      "Length =  9 , Number =  20\n",
+      "Length =  3 , Number =  21\n",
+      "Length =  3 , Number =  22\n",
+      "Length =  0 , Number =  23\n",
+      "Length =  7 , Number =  24\n",
+      "Length =  5 , Number =  25\n",
+      "Length =  1 , Number =  26\n",
+      "Length =  1 , Number =  27\n",
+      "Length =  4 , Number =  28\n",
+      "Length =  6 , Number =  29\n",
+      "Length =  0 , Number =  30\n",
+      "Length =  6 , Number =  31\n",
+      "Length =  14 , Number =  32\n",
+      "Length =  14 , Number =  33\n",
+      "Length =  2 , Number =  34\n",
+      "Length =  2 , Number =  35\n",
+      "Length =  1 , Number =  36\n",
+      "Length =  0 , Number =  37\n",
+      "Length =  10 , Number =  38\n",
+      "Length =  12 , Number =  39\n",
+      "Length =  11 , Number =  40\n",
+      "Length =  3 , Number =  41\n",
+      "Length =  7 , Number =  42\n",
+      "Length =  7 , Number =  43\n",
+      "Length =  6 , Number =  44\n",
+      "Length =  7 , Number =  45\n",
+      "Length =  3 , Number =  46\n",
+      "Length =  7 , Number =  47\n",
+      "Length =  2 , Number =  48\n",
+      "Length =  4 , Number =  49\n",
+      "Length =  1 , Number =  50\n",
+      "Length =  4 , Number =  51\n",
+      "Length =  4 , Number =  52\n",
+      "Length =  5 , Number =  53\n",
+      "Length =  3 , Number =  54\n",
+      "Length =  2 , Number =  55\n",
+      "Length =  4 , Number =  56\n",
+      "Length =  5 , Number =  57\n",
+      "Length =  5 , Number =  58\n",
+      "Length =  3 , Number =  59\n",
+      "Length =  3 , Number =  60\n",
+      "Length =  3 , Number =  61\n",
+      "Length =  4 , Number =  62\n",
+      "Length =  7 , Number =  63\n",
+      "Length =  1 , Number =  64\n",
+      "Length =  6 , Number =  65\n",
+      "Length =  2 , Number =  66\n",
+      "Length =  3 , Number =  67\n",
+      "Length =  7 , Number =  68\n",
+      "Length =  2 , Number =  69\n",
+      "Length =  2 , Number =  70\n",
+      "Length =  5 , Number =  71\n",
+      "Length =  4 , Number =  72\n",
+      "Length =  7 , Number =  73\n",
+      "Length =  5 , Number =  74\n",
+      "Length =  6 , Number =  75\n",
+      "Length =  1 , Number =  76\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Applied processor reduces input query to empty string, all comparisons will have score 0. [Query: '']\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length =  4 , Number =  77\n",
+      "Length =  6 , Number =  78\n",
+      "Length =  3 , Number =  79\n",
+      "Length =  9 , Number =  80\n",
+      "Length =  5 , Number =  81\n",
+      "Length =  3 , Number =  82\n",
+      "Length =  3 , Number =  83\n",
+      "Length =  5 , Number =  84\n",
+      "Length =  6 , Number =  85\n",
+      "Length =  10 , Number =  86\n",
+      "Length =  2 , Number =  87\n",
+      "Length =  2 , Number =  88\n",
+      "Length =  5 , Number =  89\n",
+      "Length =  6 , Number =  90\n",
+      "Length =  3 , Number =  91\n",
+      "Length =  3 , Number =  92\n",
+      "Length =  3 , Number =  93\n",
+      "Length =  3 , Number =  94\n",
+      "Length =  1 , Number =  95\n",
+      "Length =  4 , Number =  96\n",
+      "Length =  2 , Number =  97\n",
+      "Length =  1 , Number =  98\n",
+      "Length =  4 , Number =  99\n",
+      "Length =  2 , Number =  100\n"
+     ]
+    }
+   ],
+   "source": [
+    "testdata = JPE_1940_2010.loc[0:100].reset_index(drop = True)\n",
+    "\n",
+    "for i in range(len(testdata)):\n",
+    "    split = testdata.iat[i,6].split('\\n\\n')\n",
+    "    split_len = len(testdata.iat[i,6].split('\\n\\n'))\n",
+    "    affiliations = []\n",
+    "    for j in range(split_len):\n",
+    "        #print(i)\n",
+    "        if len(process.extractBests(split[j],Affiliation_choices, limit= 10, score_cutoff= 90)) > 0:\n",
+    "            affiliations = affiliations + process.extractBests(split[j],Affiliation_choices, limit= 10, score_cutoff= 90)\n",
+    "        #affiliations = process.extractBests(testdata.iat[i,6],Affiliation_choices, score_cutoff = 90 )\n",
+    "            #print(\"Length = \" , len(affiliations), \", Number = \",j)\n",
+    "            #print(\"Length = \" , len(affiliations), \", Number = \",j,'below')\n",
+    "        #print(i,split_len)\n",
+    "        if i == split_len:\n",
+    "            break\n",
+    "\n",
+    "    print(\"Length = \" , len(affiliations), \", Number = \",i)\n",
+    "    if len(affiliations) == 0:\n",
+    "        testdata.loc[i,['Missing aff']] = \"Missing\"\n",
+    "        testdata.loc[i,['No of Affs']] = len(affiliations)\n",
+    "    elif len(affiliations) == 1:\n",
+    "        testdata.loc[i,['aff1']] = affiliations[0][0]\n",
+    "        testdata.loc[i,['Missing aff']] = \"Contains\"\n",
+    "        testdata.loc[i,['No of Affs']] = len(affiliations)\n",
+    "    elif len(affiliations) == 2:\n",
+    "        testdata.loc[i,['aff1']] = affiliations[0][0]\n",
+    "        testdata.loc[i,['aff2']] = affiliations[1][0]\n",
+    "        testdata.loc[i,['Missing aff']] = \"Contains\"\n",
+    "        testdata.loc[i,['No of Affs']] = len(affiliations)\n",
+    "    elif len(affiliations) == 3:\n",
+    "        testdata.loc[i,['aff1']] = affiliations[0][0]\n",
+    "        testdata.loc[i,['aff2']] = affiliations[1][0]\n",
+    "        testdata.loc[i,['aff3']] = affiliations[2][0]\n",
+    "        testdata.loc[i,['Missing aff']] = \"Contains\"\n",
+    "        testdata.loc[i,['No of Affs']] = len(affiliations)\n",
+    "    elif len(affiliations) == 4:\n",
+    "        testdata.loc[i,['aff1']] = affiliations[0][0]\n",
+    "        testdata.loc[i,['aff2']] = affiliations[1][0]\n",
+    "        testdata.loc[i,['aff3']] = affiliations[2][0]\n",
+    "        testdata.loc[i,['aff4']] = affiliations[3][0]\n",
+    "        testdata.loc[i,['Missing aff']] = \"Contains\"\n",
+    "        testdata.loc[i,['No of Affs']] = len(affiliations)\n",
+    "    elif len(affiliations) == 5:\n",
+    "        testdata.loc[i,['aff1']] = affiliations[0][0]\n",
+    "        testdata.loc[i,['aff2']] = affiliations[1][0]\n",
+    "        testdata.loc[i,['aff3']] = affiliations[2][0]\n",
+    "        testdata.loc[i,['aff4']] = affiliations[3][0]\n",
+    "        testdata.loc[i,['aff5']] = affiliations[4][0]\n",
+    "        testdata.loc[i,['Missing aff']] = \"Contains\"\n",
+    "        testdata.loc[i,['No of Affs']] = len(affiliations)\n",
+    "    elif len(affiliations) == 6:\n",
+    "        testdata.loc[i,['aff1']] = affiliations[0][0]\n",
+    "        testdata.loc[i,['aff2']] = affiliations[1][0]\n",
+    "        testdata.loc[i,['aff3']] = affiliations[2][0]\n",
+    "        testdata.loc[i,['aff4']] = affiliations[3][0]\n",
+    "        testdata.loc[i,['aff5']] = affiliations[4][0]\n",
+    "        testdata.loc[i,['aff6']] = affiliations[5][0]\n",
+    "        testdata.loc[i,['Missing aff']] = \"Contains\"\n",
+    "        testdata.loc[i,['No of Affs']] = len(affiliations)\n",
+    "    elif len(affiliations) == 7:\n",
+    "        testdata.loc[i,['aff1']] = affiliations[0][0]\n",
+    "        testdata.loc[i,['aff2']] = affiliations[1][0]\n",
+    "        testdata.loc[i,['aff3']] = affiliations[2][0]\n",
+    "        testdata.loc[i,['aff4']] = affiliations[3][0]\n",
+    "        testdata.loc[i,['aff5']] = affiliations[4][0]\n",
+    "        testdata.loc[i,['aff6']] = affiliations[5][0]\n",
+    "        testdata.loc[i,['aff7']] = affiliations[6][0]\n",
+    "        testdata.loc[i,['Missing aff']] = \"Contains\"\n",
+    "        testdata.loc[i,['No of Affs']] = len(affiliations)\n",
+    "    elif len(affiliations) == 8:\n",
+    "        testdata.loc[i,['aff1']] = affiliations[0][0]\n",
+    "        testdata.loc[i,['aff2']] = affiliations[1][0]\n",
+    "        testdata.loc[i,['aff3']] = affiliations[2][0]\n",
+    "        testdata.loc[i,['aff4']] = affiliations[3][0]\n",
+    "        testdata.loc[i,['aff5']] = affiliations[4][0]\n",
+    "        testdata.loc[i,['aff6']] = affiliations[5][0]\n",
+    "        testdata.loc[i,['aff7']] = affiliations[6][0]\n",
+    "        testdata.loc[i,['aff8']] = affiliations[7][0]\n",
+    "        testdata.loc[i,['Missing aff']] = \"Contains\"\n",
+    "        testdata.loc[i,['No of Affs']] = len(affiliations)\n",
+    "    elif len(affiliations) == 9:\n",
+    "        testdata.loc[i,['aff1']] = affiliations[0][0]\n",
+    "        testdata.loc[i,['aff2']] = affiliations[1][0]\n",
+    "        testdata.loc[i,['aff3']] = affiliations[2][0]\n",
+    "        testdata.loc[i,['aff4']] = affiliations[3][0]\n",
+    "        testdata.loc[i,['aff5']] = affiliations[4][0]\n",
+    "        testdata.loc[i,['aff6']] = affiliations[5][0]\n",
+    "        testdata.loc[i,['aff7']] = affiliations[6][0]\n",
+    "        testdata.loc[i,['aff8']] = affiliations[7][0]\n",
+    "        testdata.loc[i,['aff9']] = affiliations[8][0]\n",
+    "        testdata.loc[i,['Missing aff']] = \"Contains\"\n",
+    "        testdata.loc[i,['No of Affs']] = len(affiliations)\n",
+    "    else: \n",
+    "        testdata.loc[i,['Missing aff']] = \"More than 9\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testdata.head\n",
+    "testdata.to_excel('/Users/MattJohnson/Desktop/Refs + affiliations/Affiliations/RES/Fuzzy matching/JPE_1940_2010_test.xlsx') "
    ]
   }
  ],
